# football-statsbomb-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.py  download_events.py  get_competitions.py  get_matches.py
tests/: test_utils.py
